Large commit from work

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+# -*- mode: gitignore; -*-
 *~
+\q#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
 ecb/
 ede-projects.el
 elpa/*
@@ -12,4 +17,61 @@ helm-exwm
 semanticdb
 xelb
 tramp
-*#
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
+
+# recentfiles
+recentf
+
+# semanticdb
+/semanticdb/
+
+# computer specific elisp
+cselisp/
+
+# annotations file
+annotations
+
+# projects and things
+projectile-bookmarks.*
+ede-projects.el
+
+emacs-fireplace/
